# ai-utils

./: pyproject.toml
aiutils/: __init__.py  claude_config.py  embeddings.py  last_diffs.json  modules.py  modules2.py  old__init__.py  openai_config.py  prompt_engine.py  test.py  voice_config.py
aiutils/custom_templates/: file.jinja2  prompt_template.j2  refactor_template.jinja2
aiutils/custom_templates/pydantic_v2/: BaseModel.jinja2
aiutils/tmp/: latest_structured_outout.json
