[project]
name = "ai-utils"
version = "0.6.0"
description = ""
authors = [
    {name = "u2084511felix",email = "79988595+u2084511felix@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.70.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "datamodel-code-generator (>=0.28.5,<0.29.0)",
    "tiktoken (>=0.9.0)"
]
[tool.poetry]
packages = [{include = "aiutils"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
